# Drop

./: .dockerignore  .gitignore  CODEBUDDY.md  DROP产品文档.md  Makefile  PROJECT_STRUCTURE.md  docker-compose.yml  package-lock.json  package.json
analysis/: Dockerfile  analysis_advisor.py  config.ini  nl_parser.py  requirements.txt  rules.yaml
analysis/drop_analyzer/: collapsed2tree.py  hotmethod_analyzer.py
analysis/java_heap_analyzer/: go.mod  main.go  main_test.go
analysis/tests/: test_analysis_advisor.py  test_hotmethod_analyzer.py
apiserver/: Dockerfile  apiserver.yaml.example  go.mod  go.sum  main.go
apiserver/config/: config.go
apiserver/middleware/: auth.go  auth_test.go  cors.go  log.go  ratelimit.go
apiserver/model/: model.go
apiserver/pkg/storage/: storage.go
apiserver/pkg/storage/minio/: minio.go
apiserver/server/: analyzer.go  continuous_test.go  ebpf_test.go  handler.go  handler_test.go  nl_handler.go  nl_handler_integration_test.go  nl_handler_test.go  scheduler.go  server.go  statemachine_test.go  storage_test.go  test_helpers.go
docs/: design.md
drop/: CMakeLists.txt  Dockerfile
drop/agent/: main.cpp
drop/common/bpf/: Makefile  offcpu.bpf.c  vmlinux.h
drop/common/proto/: common.proto  control.proto  healthcheck.proto  hotmethod.proto  init.proto
drop/common/src/: async_profiler_profiler.cpp  async_profiler_profiler.h  container_info.cpp  container_info.h  continuous_profiler.cpp  continuous_profiler.h  cos_client.cpp  cos_client.h  ebpf_loader.cpp  ebpf_loader.h  ebpf_profiler.cpp  ebpf_profiler.h  perf_profiler.cpp  perf_profiler.h  profiler.h  profiler_factory.cpp  profiler_factory.h  script_runner.cpp  script_runner.h  server_pool.h  task_queue.cpp  task_queue.h
drop/server/: main.cpp
drop/tests/: async_profiler_test.cpp  core_test.cpp  ebpf_loader_test.cpp
drop/tools/: install_async_profiler.sh
etc/: seccomp-drop-agent.json
memory-bank/: activeContext.md  architecture.md  implementation-plan.md  progress.md  projectbrief.md  requirements-traceability.md  techContext.md
scripts/: demo_ebpf.sh
tests/: phase3_integration_test.py
web_frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web_frontend/src/: App.tsx  api.ts  utils.ts
web_frontend/src/__tests__/: utils.test.ts
web_frontend/src/components/flamegraph/: FlameGraph.tsx  d3-flamegraph.css
web_frontend/src/pages/: home.tsx  schedules.tsx  taskList.tsx  taskResult.tsx
web_frontend/src/types/: d3-flame-graph.d.ts
